--- a/Rangers_103-Object_Oriented_Programming.ipynb
+++ b/Rangers_103-Object_Oriented_Programming.ipynb
@@ -1162,6 +1162,7 @@
     "    response = response.lower().strip()\n",
     "\n",
     "    if response == \"quit\":\n",
+    "        print(\"Ta\")\n",
     "        break \n",
     "    elif response == \"add\":\n",
     "        my_cart.add_item() \n",
