--- a/Rangers_103-Object_Oriented_Programming.ipynb
+++ b/Rangers_103-Object_Oriented_Programming.ipynb
@@ -1061,9 +1061,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Welcome to our store. Let's begin your shopping experience! \n",
-      "\n",
-      "Do you want to Add/Display/Edit/Delete items, or Quit? add\n"
+      "Welcome to our store. Let's begin your shopping experience! \n"
      ]
     }
    ],
@@ -1162,7 +1160,8 @@
     "    response = response.lower().strip()\n",
     "\n",
     "    if response == \"quit\":\n",
-    "        print(\"Ta\")\n",
+    "        print(\"Thanks for shopping with us!\")\n",
+    "        my_cart.display_cart()\n",
     "        break \n",
     "    elif response == \"add\":\n",
     "        my_cart.add_item() \n",
