--- a/Rangers_103-Object_Oriented_Programming.ipynb
+++ b/Rangers_103-Object_Oriented_Programming.ipynb
@@ -1061,7 +1061,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Welcome to our store. Let's begin your shopping experience! \n"
+      "Your shopping cart contains the following items:\n",
+      "\n",
+      "Item #: 1 | name: tea | quantity: 100.0 | units: bags\n",
+      "Item #: 2 | name: milk | quantity: 2.0 | units: quarts\n",
+      "Item #: 3 | name: bread | quantity: 1.0 | units: loaf\n"
      ]
     }
    ],
@@ -1070,53 +1074,53 @@
     "\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "# attributes are stored in a dict \n",
-    "# self.items = {\n",
-    "#     0: {\n",
-    "#         \"name\": \"\",\n",
-    "#         \"units\": \"\",\n",
-    "#         \"quantity\": 0\n",
-    "#     }\n",
-    "# }      \n",
-    "\n",
     "class Cart():\n",
-    "        \n",
+    "    \n",
+    "    # attributes are stored in a dict     \n",
     "    def __init__(self):\n",
-    "        self.items = {}\n",
+    "        self.items = {\n",
+    "            0: {\n",
+    "                \"name\": \"\",\n",
+    "                \"units\": \"\",\n",
+    "                \"quantity\": 0,\n",
+    "            }\n",
+    "        }\n",
     "\n",
     "    def display_cart(self):\n",
+    "        clear_output()\n",
     "        if self.cart_empty():\n",
     "            print(\"\\nYour shopping cart is currently empty.\")\n",
     "        else:\n",
-    "            print(\"\\nYour shopping cart contains the following items:\")\n",
+    "            print(\"\\nYour shopping cart contains the following items:\\n\")\n",
     "            for key1, value1 in self.items.items():\n",
     "                if key1 > 0:\n",
     "                    print(f\"Item #: {key1} | name: {value1['name']} | quantity: {value1['quantity']} | units: {value1['units']}\")\n",
     "\n",
     "    def add_item(self):\n",
-    "        if len(self.items) == 0:\n",
-    "            self.items[0] = {}\n",
-    "        else:\n",
-    "            self.items[list(self.items)[-1] + 1] = {}\n",
-    "            self.items[list(self.items)[-1]][\"name\"] = input(\"What do you want to add to your cart? \")\n",
-    "            self.items[list(self.items)[-1]][\"units\"] = input(\"What are the units (e.g. count, ounces, etc.) of your item? \")           \n",
-    "            quantity = \"\"\n",
-    "            while not isinstance(quantity, float):\n",
-    "                try:\n",
-    "                    quantity = float(input(\"What quantity of your item do you want to add to your cart? \"))\n",
-    "                except:\n",
-    "                    print(\"Please enter a number only.\")\n",
-    "                    quantity = float(input(\"What quantity of your item do you want to add to your cart? \"))\n",
-    "                finally:\n",
-    "                    continue\n",
-    "            self.items[list(self.items)[-1]][\"quantity\"] = quantity\n",
+    "        self.items[list(self.items)[-1] + 1] = {}\n",
+    "        self.items[list(self.items)[-1]][\"name\"] = input(\"What do you want to add to your cart? \")\n",
+    "        self.items[list(self.items)[-1]][\"units\"] = input(\"What are the units (e.g. count, ounces, etc.) of your item? \")           \n",
+    "        # check for valid i.e. numerical entry\n",
+    "        quantity = \"\"\n",
+    "        while not isinstance(quantity, float):\n",
+    "            try:\n",
+    "                quantity = float(input(\"What quantity of your item do you want to add to your cart? \"))\n",
+    "            except:\n",
+    "                print(\"Please enter a number only.\")\n",
+    "                quantity = float(input(\"What quantity of your item do you want to add to your cart? \"))\n",
+    "            finally:\n",
+    "                continue\n",
+    "        self.items[list(self.items)[-1]][\"quantity\"] = quantity\n",
     "  \n",
     "    def edit_cart(self):\n",
+    "        # check for valid i.e. numerical entry\n",
     "        item_number = int(input(\"Which item number do you want to edit? \"))\n",
+    "        # check if item_number exists or is not base placeholder item_number 0\n",
     "        if item_number == 0 or item_number not in self.items:\n",
     "            print(\"Please enter a valid item number.\")\n",
     "            self.edit_cart()\n",
     "        else:\n",
+    "            # check for valid i.e. numerical entry\n",
     "            quantity = \"\"\n",
     "            while not isinstance(quantity, float):\n",
     "                try:\n",
@@ -1129,9 +1133,11 @@
     "            self.items[item_number][\"quantity\"] = quantity\n",
     "        \n",
     "    def delete_item_entirely(self):\n",
+    "\n",
     "        item_number = \"\"\n",
     "        while not isinstance(item_number, int):\n",
     "            item_number = int(input(\"Which item number do you want to delete entirely? \"))\n",
+    "            # check if item_number exists or is not base placeholder item_number 0\n",
     "            if item_number == 0 or item_number not in self.items:\n",
     "                print(\"Please enter a valid item number.\")\n",
     "                self.delete_item_entirely()\n",
@@ -1139,7 +1145,7 @@
     "                del self.items[item_number]\n",
     "    \n",
     "    def cart_empty(self):\n",
-    "        if bool(self.items):\n",
+    "        if len(self.items) == 1:\n",
     "            return True\n",
     "        else:\n",
     "            return False\n",
@@ -1151,20 +1157,21 @@
     "finally:\n",
     "    my_cart = Cart()\n",
     "\n",
-    "clear_output()\n",
     "print(\"\\nWelcome to our store. Let's begin your shopping experience! \")\n",
     "\n",
     "while True:\n",
-    "\n",
+    "    \n",
     "    response = input(\"\\nDo you want to Add/Display/Edit/Delete items, or Quit? \")\n",
     "    response = response.lower().strip()\n",
     "\n",
     "    if response == \"quit\":\n",
-    "        print(\"Thanks for shopping with us!\")\n",
-    "        my_cart.display_cart()\n",
+    "        if not my_cart.cart_empty():\n",
+    "            my_cart.display_cart()\n",
+    "        print(\"\\nThanks for shopping with us!\\n\")\n",
     "        break \n",
     "    elif response == \"add\":\n",
-    "        my_cart.add_item() \n",
+    "        my_cart.add_item()\n",
+    "        my_cart.display_cart()\n",
     "    elif response == \"display\":\n",
     "        my_cart.display_cart()\n",
     "    elif response == \"edit\":\n",
